# c_study_2

./: CMakeLists.txt  main.c
exercicios/: exercicio_1.c  exercicio_1.h  exercicio_2.c  exercicio_2.h  exercicio_3.c  exercicio_3.h  exercicio_4.c  exercicio_4.h
