cmake_minimum_required(VERSION 3.21)
project(lista_2 C)

set(CMAKE_C_STANDARD 99)

add_executable(
        lista_2 main.c
        exercicios/exercicio_1.c
        exercicios/exercicio_1.h
        exercicios/exercicio_2.c
        exercicios/exercicio_2.h
        exercicios/exercicio_3.c
        exercicios/exercicio_3.h
        exercicios/exercicio_4.c
        exercicios/exercicio_4.h
)
